--- a/.abf.yml
+++ b/.abf.yml
@@ -1,1 +1,3 @@
 sources:
+  protobuf-28.0.tar.gz: c6af9f4b675f012f2c27fee98e1aa3a5932fb0f3
+  protobuf-5.28.0.tar.gz: 92edcc9ee052def090d06bd48a397aa56ab56bc8
